--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,3 +17,6 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+           # Language plugin
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
